@@ -31,6 +31,22 @@
 #ifndef __J2K_CONVERT_H
 #define __J2K_CONVERT_H
 
+/**@name RAW image encoding parameters */
+/*@{*/
+typedef struct raw_cparameters {
+	/** width of the raw image */
+	int rawWidth;
+	/** height of the raw image */
+	int rawHeight;
+	/** components of the raw image */
+	int rawComp;
+	/** bit depth of the raw image */
+	int rawBitDepth;
+	/** signed/unsigned raw image */
+	bool rawSigned;
+	/*@}*/
+} raw_cparameters_t;
+
 opj_image_t* bmptoimage(const char *filename, opj_cparameters_t *parameters);
 
 int imagetobmp(opj_image_t *image, const char *outfile);
@@ -51,6 +67,10 @@ int imagetopgx(opj_image_t *image, const char *outfile);
 opj_image_t* pnmtoimage(const char *filename, opj_cparameters_t *parameters);
 
 int imagetopnm(opj_image_t *image, const char *outfile);
+
+int imagetoraw(opj_image_t * image, const char *outfile);
+
+opj_image_t* rawtoimage(const char *filename, opj_cparameters_t *parameters, raw_cparameters_t *raw_cp);
 
 #endif /* __J2K_CONVERT_H */
 
